# rust

./: .env  Cargo.toml
src/: array.rs  conditionals.rs  data_types.rs  date.rs  enums.rs  error.rs  file.rs  functions.rs  group_by.rs  hash.rs  hashmap.rs  iter.rs  loops.rs  main.rs  match_operator.rs  max_by.rs  mutex.rs  note.txt  options.rs  password_encrypt.rs  pointer_reference.rs  print.rs  results.rs  serde_json.rs  sort_by.rs  string_matches.rs  strings.rs  structs.rs  structs_ex.rs  student_info.rs  thread.rs  trait_impl.rs  traits.rs  tuples.rs  type_of.rs  variables.rs  vectors.rs  voucher.rs
src/rocket_rs/demo/: mod.rs
