[package]
name = "tryrust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_repr = "0.1.9"
serde_urlencoded = "0.7.1"
mongodb = "2.2.2"
chrono = "0.4.19"
itertools = "0.10.5"
scrypt = { version = "0.10.0", features = ["simple"] }
rocket = { version = "0.5.0-rc.2", default-features = false, features = [
    "json",
] }
rocket_okapi = { git = "https://github.com/ThouCheese/okapi", branch = "feat/rocket0.5-rc.2", features = [
    "rapidoc",
] }
