[package]
name = "sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.2.1" }
actix-rt = { version="2.7.0" }
tokio = { version = "1.24.1" }
mongodb = { version = "2.3.1" }
serde = { version = "1.0.151", features = ["derive"] }